[gd_scene load_steps=12 format=3 uid="uid://dtt2wcpi7wi7r"]

[ext_resource type="Script" path="res://Scene/Forest/Rooms/FourWayRoom/FourWay.gd" id="1_hs8ux"]
[ext_resource type="Texture2D" uid="uid://b7p1vl7hrge60" path="res://Asset/Level/backgroundChecker.png" id="1_xvgpn"]
[ext_resource type="Texture2D" uid="uid://bm6sn1f05g1ub" path="res://Asset/Level/FYPTilemap.png" id="2_uyhp2"]
[ext_resource type="Script" path="res://Scene/Forest/Rooms/FourWayRoom/SquareFourWay.gd" id="4_t231l"]
[ext_resource type="Script" path="res://Scene/Forest/Rooms/Door/Door.gd" id="4_tietu"]
[ext_resource type="Texture2D" uid="uid://cgcgvpehcs00e" path="res://Asset/bannerL.png" id="6_5ti82"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e53mp"]
texture = ExtResource("1_xvgpn")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6aav3"]
texture = ExtResource("2_uyhp2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.84375, -4.09375, 16, -4.09375, 16, -0.15625, -0.15625, 0.09375, -0.03125, 16, -2.71875, 16)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -4.09375, 16, -0.15625, -16, -0.09375, -16, -3.84375)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.84375, -4.09375, -16, -4.09375, -16, -0.15625, 0.15625, 0.09375, 0.03125, 16, 2.71875, 16)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.15625, -16, -0.15625, -16, -0.09375, 0.03125, -16, 0.28125, -16, -3.03125, -2.90625, -3.09375)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.15625, -16, 0.15625, -16, 0.09375, 0.03125, 16, 0.28125, 16, -3.03125, 2.90625, -3.09375)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.09375, 16, -0.15625, 16, -0.09375, -16, -3.84375, -16)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.09375, 16, 0.15625, 16, 0.09375, -16, 3.84375, -16)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.15625, 16, -0.15625, 16, -0.09375, -0.03125, -16, -0.28125, -16, 3.03125, -2.90625, 3.09375)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.15625, 16, 0.15625, 16, 0.09375, -0.03125, 16, -0.28125, 16, 3.03125, 2.90625, 3.09375)
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.84375, 4.09375, 16, 4.09375, 16, 0.15625, -0.15625, -0.09375, -0.03125, -16, -2.71875, -16)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 4.09375, 16, 0.15625, -16, 0.09375, -16, 3.84375)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.84375, 4.09375, -16, 4.09375, -16, 0.15625, 0.15625, -0.09375, 0.03125, -16, 2.71875, -16)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_jwjcw"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 16
sources/2 = SubResource("TileSetAtlasSource_6aav3")
sources/1 = SubResource("TileSetAtlasSource_e53mp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tk78"]
size = Vector2(165, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrtl6"]
size = Vector2(30, 101)

[node name="FourWay" type="Node2D"]
script = ExtResource("1_hs8ux")

[node name="RoomSets" type="Node2D" parent="."]

[node name="SquareFourWay" type="TileMap" parent="RoomSets"]
texture_filter = 1
tile_set = SubResource("TileSet_jwjcw")
format = 2
layer_0/name = "Background"
layer_0/z_index = -100
layer_0/tile_data = PackedInt32Array(-393223, 1, 0, -327687, 1, 0, -262151, 1, 0, -196615, 1, 0, -131079, 1, 0, -65543, 1, 0, -7, 1, 0, -393222, 1, 0, -327686, 1, 0, -262150, 1, 0, -196614, 1, 0, -131078, 1, 0, -65542, 1, 0, -6, 1, 0, -393221, 1, 0, -327685, 1, 0, -262149, 1, 0, -196613, 1, 0, -131077, 1, 0, -65541, 1, 0, -5, 1, 0, -393220, 1, 0, -327684, 1, 0, -262148, 1, 0, -196612, 1, 0, -131076, 1, 0, -65540, 1, 0, -4, 1, 0, -393219, 1, 0, -327683, 1, 0, -262147, 1, 0, -196611, 1, 0, -131075, 1, 0, -65539, 1, 0, -3, 1, 0, -393218, 1, 0, -327682, 1, 0, -262146, 1, 0, -196610, 1, 0, -131074, 1, 0, -65538, 1, 0, -2, 1, 0, -393217, 1, 0, -327681, 1, 0, -262145, 1, 0, -196609, 1, 0, -131073, 1, 0, -65537, 1, 0, -1, 1, 0, -458752, 1, 0, -393216, 1, 0, -327680, 1, 0, -262144, 1, 0, -196608, 1, 0, -131072, 1, 0, -65536, 1, 0, -458751, 1, 0, -393215, 1, 0, -327679, 1, 0, -262143, 1, 0, -196607, 1, 0, -131071, 1, 0, -65535, 1, 0, -458750, 1, 0, -393214, 1, 0, -327678, 1, 0, -262142, 1, 0, -196606, 1, 0, -131070, 1, 0, -65534, 1, 0, -458749, 1, 0, -393213, 1, 0, -327677, 1, 0, -262141, 1, 0, -196605, 1, 0, -131069, 1, 0, -65533, 1, 0, -458748, 1, 0, -393212, 1, 0, -327676, 1, 0, -262140, 1, 0, -196604, 1, 0, -131068, 1, 0, -65532, 1, 0, -458747, 1, 0, -393211, 1, 0, -327675, 1, 0, -262139, 1, 0, -196603, 1, 0, -131067, 1, 0, -65531, 1, 0, -458746, 1, 0, -393210, 1, 0, -327674, 1, 0, -262138, 1, 0, -196602, 1, 0, -131066, 1, 0, -65530, 1, 0, 65529, 1, 0, 131065, 1, 0, 196601, 1, 0, 262137, 1, 0, 327673, 1, 0, 393209, 1, 0, 458745, 1, 0, 65530, 1, 0, 131066, 1, 0, 196602, 1, 0, 262138, 1, 0, 327674, 1, 0, 393210, 1, 0, 458746, 1, 0, 65531, 1, 0, 131067, 1, 0, 196603, 1, 0, 262139, 1, 0, 327675, 1, 0, 393211, 1, 0, 458747, 1, 0, 65532, 1, 0, 131068, 1, 0, 196604, 1, 0, 262140, 1, 0, 327676, 1, 0, 393212, 1, 0, 458748, 1, 0, 65533, 1, 0, 131069, 1, 0, 196605, 1, 0, 262141, 1, 0, 327677, 1, 0, 393213, 1, 0, 458749, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, 458751, 1, 0, 0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 327682, 1, 0, 393218, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 1, 0, 327683, 1, 0, 393219, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 1, 0, 327684, 1, 0, 393220, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, 393221, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, 393222, 1, 0, -524297, 1, 0, -458761, 1, 0, -393225, 1, 0, -327689, 1, 0, -262153, 1, 0, -196617, 1, 0, -131081, 1, 0, -65545, 1, 0, -9, 1, 0, 65527, 1, 0, 131063, 1, 0, 196599, 1, 0, 262135, 1, 0, 327671, 1, 0, 393207, 1, 0, 458743, 1, 0, 524279, 1, 0, 589815, 1, 0, -524296, 1, 0, -458760, 1, 0, -393224, 1, 0, -327688, 1, 0, -262152, 1, 0, -196616, 1, 0, -131080, 1, 0, -65544, 1, 0, -8, 1, 0, 65528, 1, 0, 131064, 1, 0, 196600, 1, 0, 262136, 1, 0, 327672, 1, 0, 393208, 1, 0, 458744, 1, 0, 524280, 1, 0, 589816, 1, 0, -524295, 1, 0, -458759, 1, 0, 524281, 1, 0, 589817, 1, 0, -524294, 1, 0, -458758, 1, 0, 524282, 1, 0, 589818, 1, 0, -524293, 1, 0, -458757, 1, 0, 524283, 1, 0, 589819, 1, 0, -524292, 1, 0, -458756, 1, 0, 524284, 1, 0, 589820, 1, 0, -524291, 1, 0, -458755, 1, 0, 524285, 1, 0, 589821, 1, 0, -524290, 1, 0, -458754, 1, 0, 524286, 1, 0, 589822, 1, 0, -524289, 1, 0, -458753, 1, 0, 524287, 1, 0, 589823, 1, 0, -589824, 1, 0, -524288, 1, 0, 458752, 1, 0, 524288, 1, 0, -589823, 1, 0, -524287, 1, 0, 458753, 1, 0, 524289, 1, 0, -589822, 1, 0, -524286, 1, 0, 458754, 1, 0, 524290, 1, 0, -589821, 1, 0, -524285, 1, 0, 458755, 1, 0, 524291, 1, 0, -589820, 1, 0, -524284, 1, 0, 458756, 1, 0, 524292, 1, 0, -589819, 1, 0, -524283, 1, 0, 458757, 1, 0, 524293, 1, 0, -589818, 1, 0, -524282, 1, 0, 458758, 1, 0, 524294, 1, 0, -589817, 1, 0, -524281, 1, 0, -458745, 1, 0, -393209, 1, 0, -327673, 1, 0, -262137, 1, 0, -196601, 1, 0, -131065, 1, 0, -65529, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, -589816, 1, 0, -524280, 1, 0, -458744, 1, 0, -393208, 1, 0, -327672, 1, 0, -262136, 1, 0, -196600, 1, 0, -131064, 1, 0, -65528, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, 458760, 1, 0, 524296, 1, 0, -589833, 1, 0, -589832, 1, 0, -589831, 1, 0, -589830, 1, 0, -589829, 1, 0, -589828, 1, 0, -589827, 1, 0, -589826, 1, 0, -589825, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -655357, 1, 0, -655356, 1, 0, -655355, 1, 0, -655354, 1, 0, -655353, 1, 0, -655352, 1, 0, -589835, 1, 0, -524299, 1, 0, -458763, 1, 0, -393227, 1, 0, -327691, 1, 0, -262155, 1, 0, -196619, 1, 0, -131083, 1, 0, -65547, 1, 0, -11, 1, 0, 65525, 1, 0, 131061, 1, 0, 196597, 1, 0, 262133, 1, 0, 327669, 1, 0, 393205, 1, 0, 458741, 1, 0, 524277, 1, 0, 589813, 1, 0, -589834, 1, 0, -524298, 1, 0, -458762, 1, 0, -393226, 1, 0, -327690, 1, 0, -262154, 1, 0, -196618, 1, 0, -131082, 1, 0, -65546, 1, 0, -10, 1, 0, 65526, 1, 0, 131062, 1, 0, 196598, 1, 0, 262134, 1, 0, 327670, 1, 0, 393206, 1, 0, 458742, 1, 0, 524278, 1, 0, 589814, 1, 0, 655349, 1, 0, 720885, 1, 0, 655350, 1, 0, 720886, 1, 0, 655351, 1, 0, 720887, 1, 0, 655352, 1, 0, 720888, 1, 0, 655353, 1, 0, 720889, 1, 0, 655354, 1, 0, 720890, 1, 0, 655355, 1, 0, 720891, 1, 0, 655356, 1, 0, 720892, 1, 0, 655357, 1, 0, 720893, 1, 0, 655358, 1, 0, 720894, 1, 0, 655359, 1, 0, 720895, 1, 0, 589824, 1, 0, 655360, 1, 0, 589825, 1, 0, 655361, 1, 0, 589826, 1, 0, 655362, 1, 0, 589827, 1, 0, 655363, 1, 0, 589828, 1, 0, 655364, 1, 0, 589829, 1, 0, 655365, 1, 0, 589830, 1, 0, 655366, 1, 0, 589831, 1, 0, 655367, 1, 0, 589832, 1, 0, 655368, 1, 0, -655351, 1, 0, -589815, 1, 0, -524279, 1, 0, -458743, 1, 0, -393207, 1, 0, -327671, 1, 0, -262135, 1, 0, -196599, 1, 0, -131063, 1, 0, -65527, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 1, 0, 458761, 1, 0, 524297, 1, 0, 589833, 1, 0, 655369, 1, 0, -655350, 1, 0, -589814, 1, 0, -524278, 1, 0, -458742, 1, 0, -393206, 1, 0, -327670, 1, 0, -262134, 1, 0, -196598, 1, 0, -131062, 1, 0, -65526, 1, 0, 10, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 1, 0, 589834, 1, 0, 655370, 1, 0, -589837, 1, 0, -524301, 1, 0, -458765, 1, 0, -393229, 1, 0, -327693, 1, 0, -262157, 1, 0, -196621, 1, 0, -131085, 1, 0, -65549, 1, 0, -13, 1, 0, 65523, 1, 0, 131059, 1, 0, 196595, 1, 0, 262131, 1, 0, 327667, 1, 0, 393203, 1, 0, 458739, 1, 0, 524275, 1, 0, 589811, 1, 0, 655347, 1, 0, 720883, 1, 0, -589836, 1, 0, -524300, 1, 0, -458764, 1, 0, -393228, 1, 0, -327692, 1, 0, -262156, 1, 0, -196620, 1, 0, -131084, 1, 0, -65548, 1, 0, -12, 1, 0, 65524, 1, 0, 131060, 1, 0, 196596, 1, 0, 262132, 1, 0, 327668, 1, 0, 393204, 1, 0, 458740, 1, 0, 524276, 1, 0, 589812, 1, 0, 655348, 1, 0, 720884, 1, 0, 786419, 1, 0, 851955, 1, 0, 786420, 1, 0, 851956, 1, 0, 786421, 1, 0, 851957, 1, 0, 786422, 1, 0, 851958, 1, 0, 786423, 1, 0, 851959, 1, 0, 786424, 1, 0, 851960, 1, 0, 786425, 1, 0, 851961, 1, 0, 786426, 1, 0, 851962, 1, 0, 786427, 1, 0, 851963, 1, 0, 786428, 1, 0, 851964, 1, 0, 786429, 1, 0, 851965, 1, 0, 786430, 1, 0, 851966, 1, 0, 786431, 1, 0, 851967, 1, 0, 720896, 1, 0, 786432, 1, 0, 720897, 1, 0, 786433, 1, 0, 720898, 1, 0, 786434, 1, 0, 720899, 1, 0, 786435, 1, 0, 720900, 1, 0, 786436, 1, 0, 720901, 1, 0, 786437, 1, 0, 720902, 1, 0, 786438, 1, 0, 720903, 1, 0, 786439, 1, 0, 720904, 1, 0, 786440, 1, 0, 720905, 1, 0, 786441, 1, 0, 720906, 1, 0, 786442, 1, 0, -655349, 1, 0, -589813, 1, 0, -524277, 1, 0, -458741, 1, 0, -393205, 1, 0, -327669, 1, 0, -262133, 1, 0, -196597, 1, 0, -131061, 1, 0, -65525, 1, 0, 11, 1, 0, 65547, 1, 0, 131083, 1, 0, 196619, 1, 0, 262155, 1, 0, 327691, 1, 0, 393227, 1, 0, 458763, 1, 0, 524299, 1, 0, 589835, 1, 0, 655371, 1, 0, 720907, 1, 0, 786443, 1, 0, -655348, 1, 0, -589812, 1, 0, -524276, 1, 0, -458740, 1, 0, -393204, 1, 0, -327668, 1, 0, -262132, 1, 0, -196596, 1, 0, -131060, 1, 0, -65524, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 1, 0, 589836, 1, 0, 655372, 1, 0, 720908, 1, 0, 786444, 1, 0, 917491, 1, 0, 983027, 1, 0, 917492, 1, 0, 983028, 1, 0, 917493, 1, 0, 983029, 1, 0, 917494, 1, 0, 983030, 1, 0, 917495, 1, 0, 983031, 1, 0, 917496, 1, 0, 983032, 1, 0, 917497, 1, 0, 983033, 1, 0, 917498, 1, 0, 983034, 1, 0, 917499, 1, 0, 983035, 1, 0, 917500, 1, 0, 983036, 1, 0, 917501, 1, 0, 983037, 1, 0, 917502, 1, 0, 983038, 1, 0, 917503, 1, 0, 983039, 1, 0, 851968, 1, 0, 917504, 1, 0, 851969, 1, 0, 917505, 1, 0, 851970, 1, 0, 917506, 1, 0, 851971, 1, 0, 917507, 1, 0, 851972, 1, 0, 917508, 1, 0, 851973, 1, 0, 917509, 1, 0, 851974, 1, 0, 917510, 1, 0, 851975, 1, 0, 917511, 1, 0, 851976, 1, 0, 917512, 1, 0, 851977, 1, 0, 917513, 1, 0, 851978, 1, 0, 917514, 1, 0, 851979, 1, 0, 917515, 1, 0, 851980, 1, 0, 917516, 1, 0)
layer_1/name = "Grass"
layer_1/z_index = -2
layer_1/tile_data = PackedInt32Array(-327688, 196610, 0, -262152, 196610, 1, -196616, 196610, 1, -131080, 393218, 0, -65544, 262146, 1, -8, 262146, 1, 65528, 262146, 1, 131064, 262146, 1, 196600, 262146, 1, 262136, 262146, 1, 327672, 393218, 1, 393208, 196610, 1, 458744, 196610, 1, 524280, 196610, 1, 589816, 196610, 2, -327687, 262146, 0, -262151, 262146, 1, -196615, 262146, 1, -131079, 262146, 1, -65543, 262146, 1, -7, 262146, 1, 65529, 262146, 1, 131065, 262146, 1, 196601, 262146, 1, 262137, 262146, 1, 327673, 262146, 1, 393209, 262146, 1, 458745, 262146, 1, 524281, 262146, 1, 589817, 262146, 2, -327686, 262146, 0, -262150, 262146, 1, -196614, 262146, 1, -131078, 262146, 1, -65542, 262146, 1, -6, 262146, 1, 65530, 262146, 1, 131066, 262146, 1, 196602, 262146, 1, 262138, 262146, 1, 327674, 262146, 1, 393210, 262146, 1, 458746, 262146, 1, 524282, 262146, 1, 589818, 262146, 2, -327685, 262146, 0, -262149, 262146, 1, -196613, 262146, 1, -131077, 262146, 1, -65541, 262146, 1, -5, 262146, 1, 65531, 262146, 1, 131067, 262146, 1, 196603, 262146, 1, 262139, 262146, 1, 327675, 262146, 1, 393211, 262146, 1, 458747, 262146, 1, 524283, 262146, 1, 589819, 262146, 2, -327684, 393218, 0, -262148, 262146, 1, -196612, 262146, 1, -131076, 262146, 1, -65540, 262146, 1, -4, 262146, 1, 65532, 262146, 1, 131068, 262146, 1, 196604, 262146, 1, 262140, 262146, 1, 327676, 262146, 1, 393212, 262146, 1, 458748, 262146, 1, 524284, 262146, 1, 589820, 393218, 1, -327683, 262146, 1, -262147, 262146, 1, -196611, 262146, 1, -131075, 262146, 1, -65539, 262146, 1, -3, 262146, 1, 65533, 262146, 1, 131069, 262146, 1, 196605, 262146, 1, 262141, 262146, 1, 327677, 262146, 1, 393213, 262146, 1, 458749, 262146, 1, 524285, 262146, 1, 589821, 262146, 1, -327682, 262146, 1, -262146, 262146, 1, -196610, 262146, 1, -131074, 262146, 1, -65538, 262146, 1, -2, 262146, 1, 65534, 262146, 1, 131070, 262146, 1, 196606, 262146, 1, 262142, 262146, 1, 327678, 262146, 1, 393214, 262146, 1, 458750, 262146, 1, 524286, 262146, 1, 589822, 262146, 1, -327681, 262146, 1, -262145, 262146, 1, -196609, 262146, 1, -131073, 262146, 1, -65537, 262146, 1, -1, 262146, 1, 65535, 262146, 1, 131071, 262146, 1, 196607, 262146, 1, 262143, 262146, 1, 327679, 262146, 1, 393215, 262146, 1, 458751, 262146, 1, 524287, 262146, 1, 589823, 262146, 1, -393216, 262146, 1, -327680, 262146, 1, -262144, 262146, 1, -196608, 262146, 1, -131072, 262146, 1, -65536, 262146, 1, 0, 262146, 1, 65536, 262146, 1, 131072, 262146, 1, 196608, 262146, 1, 262144, 262146, 1, 327680, 262146, 1, 393216, 262146, 1, 458752, 262146, 1, 524288, 262146, 1, -393215, 262146, 1, -327679, 262146, 1, -262143, 262146, 1, -196607, 262146, 1, -131071, 262146, 1, -65535, 262146, 1, 1, 262146, 1, 65537, 262146, 1, 131073, 262146, 1, 196609, 262146, 1, 262145, 262146, 1, 327681, 262146, 1, 393217, 262146, 1, 458753, 262146, 1, 524289, 262146, 1, -393214, 262146, 1, -327678, 262146, 1, -262142, 262146, 1, -196606, 262146, 1, -131070, 262146, 1, -65534, 262146, 1, 2, 262146, 1, 65538, 262146, 1, 131074, 262146, 1, 196610, 262146, 1, 262146, 262146, 1, 327682, 262146, 1, 393218, 262146, 1, 458754, 262146, 1, 524290, 262146, 1, -393213, 458754, 0, -327677, 262146, 1, -262141, 262146, 1, -196605, 262146, 1, -131069, 262146, 1, -65533, 262146, 1, 3, 262146, 1, 65539, 262146, 1, 131075, 262146, 1, 196611, 262146, 1, 262147, 262146, 1, 327683, 262146, 1, 393219, 262146, 1, 458755, 262146, 1, 524291, 458754, 1, -393212, 262146, 0, -327676, 262146, 1, -262140, 262146, 1, -196604, 262146, 1, -131068, 262146, 1, -65532, 262146, 1, 4, 262146, 1, 65540, 262146, 1, 131076, 262146, 1, 196612, 262146, 1, 262148, 262146, 1, 327684, 262146, 1, 393220, 262146, 1, 458756, 262146, 1, 524292, 262146, 2, -393211, 262146, 0, -327675, 262146, 1, -262139, 262146, 1, -196603, 262146, 1, -131067, 262146, 1, -65531, 262146, 1, 5, 262146, 1, 65541, 262146, 1, 131077, 262146, 1, 196613, 262146, 1, 262149, 262146, 1, 327685, 262146, 1, 393221, 262146, 1, 458757, 262146, 1, 524293, 262146, 2, -393210, 262146, 0, -327674, 262146, 1, -262138, 262146, 1, -196602, 262146, 1, -131066, 262146, 1, -65530, 262146, 1, 6, 262146, 1, 65542, 262146, 1, 131078, 262146, 1, 196614, 262146, 1, 262150, 262146, 1, 327686, 262146, 1, 393222, 262146, 1, 458758, 262146, 1, 524294, 262146, 2, -393209, 327682, 0, -327673, 327682, 1, -262137, 327682, 1, -196601, 458754, 0, -131065, 262146, 1, -65529, 262146, 1, 7, 262146, 1, 65543, 262146, 1, 131079, 262146, 1, 196615, 262146, 1, 262151, 458754, 1, 327687, 327682, 1, 393223, 327682, 1, 458759, 327682, 1, 524295, 327682, 2, -393219, 393218, 0, -458750, 458754, 0, 589826, 458754, 1, 655357, 393218, 1, -131064, 458754, 0, 196616, 458754, 1, -65545, 393218, 0, 262135, 393218, 1, -393220, 196610, 0, -393218, 262146, 1, -393217, 262146, 1, -458752, 262146, 1, -458751, 262146, 1, -458749, 327682, 0, -196600, 327682, 0, -65528, 262146, 1, 8, 262146, 1, 65544, 262146, 1, 131080, 262146, 1, 262152, 327682, 2, 589827, 327682, 2, 655358, 262146, 1, 720894, 262146, 1, 655359, 262146, 1, 720895, 262146, 1, 589824, 262146, 1, 655360, 262146, 1, 589825, 262146, 1, 655361, 262146, 1, -10, 393218, 0, 65526, 262146, 1, 131062, 262146, 1, 196598, 393218, 1, -9, 262146, 1, 65527, 262146, 1, 131063, 262146, 1, 196599, 262146, 1, -65527, 458754, 0, 9, 262146, 1, 65545, 262146, 1, 131081, 458754, 1, -65526, 262146, 0, 10, 262146, 1, 65546, 262146, 1, 131082, 262146, 2, -458754, 262146, 1, -458753, 262146, 1, -524288, 262146, 1, -524287, 262146, 1, -11, 262146, 0, 65525, 262146, 1, 131061, 262146, 1, 196597, 262146, 2, 262134, 196610, 2, -65546, 196610, 0, 196617, 327682, 2, -131063, 327682, 0, -458755, 196610, 1, -524286, 327682, 1, 786430, 262146, 1, 786431, 262146, 1, 720896, 262146, 1, 720897, 262146, 1, 720893, 196610, 1, 786429, 196610, 1, 655362, 327682, 1, 720898, 327682, 1)
script = ExtResource("4_t231l")

[node name="Doors" type="Node2D" parent="RoomSets/SquareFourWay"]

[node name="DoorUp" type="Node2D" parent="RoomSets/SquareFourWay/Doors" node_paths=PackedStringArray("flag")]
position = Vector2(0, -230)
script = ExtResource("4_tietu")
orientation = "UP"
flag = NodePath("Flag")

[node name="Area2D" type="Area2D" parent="RoomSets/SquareFourWay/Doors/DoorUp"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomSets/SquareFourWay/Doors/DoorUp/Area2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_3tk78")

[node name="Flag" type="Sprite2D" parent="RoomSets/SquareFourWay/Doors/DoorUp"]
visible = false
texture_filter = 1
position = Vector2(-60, 0)
texture = ExtResource("6_5ti82")

[node name="DoorRight" type="Node2D" parent="RoomSets/SquareFourWay/Doors" node_paths=PackedStringArray("flag")]
position = Vector2(320, 30)
script = ExtResource("4_tietu")
orientation = "RIGHT"
flag = NodePath("Flag")

[node name="Area2D" type="Area2D" parent="RoomSets/SquareFourWay/Doors/DoorRight"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomSets/SquareFourWay/Doors/DoorRight/Area2D"]
shape = SubResource("RectangleShape2D_qrtl6")

[node name="Flag" type="Sprite2D" parent="RoomSets/SquareFourWay/Doors/DoorRight"]
visible = false
texture_filter = 1
position = Vector2(0, -50)
texture = ExtResource("6_5ti82")

[node name="DoorDown" type="Node2D" parent="RoomSets/SquareFourWay/Doors" node_paths=PackedStringArray("flag")]
position = Vector2(0, 335)
script = ExtResource("4_tietu")
orientation = "DOWN"
flag = NodePath("Flag")

[node name="Area2D" type="Area2D" parent="RoomSets/SquareFourWay/Doors/DoorDown"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomSets/SquareFourWay/Doors/DoorDown/Area2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_3tk78")

[node name="Flag" type="Sprite2D" parent="RoomSets/SquareFourWay/Doors/DoorDown"]
visible = false
texture_filter = 1
position = Vector2(60, -40)
texture = ExtResource("6_5ti82")

[node name="DoorLeft" type="Node2D" parent="RoomSets/SquareFourWay/Doors" node_paths=PackedStringArray("flag")]
position = Vector2(-320, 32)
script = ExtResource("4_tietu")
orientation = "LEFT"
flag = NodePath("Flag")

[node name="Area2D" type="Area2D" parent="RoomSets/SquareFourWay/Doors/DoorLeft"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomSets/SquareFourWay/Doors/DoorLeft/Area2D"]
shape = SubResource("RectangleShape2D_qrtl6")

[node name="Flag" type="Sprite2D" parent="RoomSets/SquareFourWay/Doors/DoorLeft"]
visible = false
texture_filter = 1
position = Vector2(0, -50)
texture = ExtResource("6_5ti82")

[connection signal="body_entered" from="RoomSets/SquareFourWay/Doors/DoorUp/Area2D" to="RoomSets/SquareFourWay/Doors/DoorUp" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="RoomSets/SquareFourWay/Doors/DoorRight/Area2D" to="RoomSets/SquareFourWay/Doors/DoorRight" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="RoomSets/SquareFourWay/Doors/DoorDown/Area2D" to="RoomSets/SquareFourWay/Doors/DoorDown" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="RoomSets/SquareFourWay/Doors/DoorLeft/Area2D" to="RoomSets/SquareFourWay/Doors/DoorLeft" method="_on_area_2d_body_entered"]
